[package]
name = "printio"
version = "0.1.0"
edition = "2021"
author = "Claudia Richoux <c@laudiacay.cool>"
license = "MIT OR Apache-2.0"
description = "A simple library to intercept a Reader or Writer and print it to something on its way in or out. Useful for debugging."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
